# kurs4

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_objects_py.html
src/: objects.py
tests/: test_objects.py
