[project]
name = "skypro-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.16.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
  )/
#  | foo.py           # Также отдельно исключить файл с именем foo.py
#                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

